fix (intro section): Higher contrast text color

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ section.header div.buttons a.buy {
  * Intro
  *************/
 section.intro {
-	color: rgba(51, 51, 51, 0.6);
+	color: #444;
 }
 
 section.intro p {
